--- a/main.html
+++ b/main.html
@@ -1,9 +1,7 @@
 <html>
 <head>
  <script>
- document.getElementById('main').innerHTML = "
- <h1> Loading... </h1>
- "
+ document.getElementById('main').innerHTML = "<h1> Loading... </h1>"
  var cs1 = ' '
  cs2 = ' '
  cs3 = ' '
